--- a/website.css
+++ b/website.css
@@ -1,5 +1,24 @@
-h1 {color : orangered;  }
+/*h1 {color : orangered;  }
 body { 
 	background-image: url("CrabNebula_Hubble_3864.jpeg");
 	background-color : beige; 
+}*/
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
+ 
+.background {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+window.onload = function() {
+  Particles.init({
+    selector: '.background'
+  });
+};
