--- a/website.css
+++ b/website.css
@@ -12,7 +12,7 @@ style {
 #particles-js {
 	width: 100;
 	height: 100vh;
-	background-image: url(pexels-eberhard-grossgasteiger-1366919.jpeg);
+	background-image: url(mypic.jpg);
 }
 
 h2 {
