--- a/website.css
+++ b/website.css
@@ -12,11 +12,14 @@ style {
 #particles-js {
 	width: 100;
 	height: 100vh;
-	background-image: url(mypic.jpg);
+	background-image: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.3), rgba(0,0,0,.3)), url(mypic.jpg);
 }
 
 h2 {
 	position: absolute;
-	top: 50%;
+	top: 40%;
 	left: 50%;
+	transform:	translate(-50%, -50%);
+	font-size: 70px;
+	color: ghostwhite;
 }
