--- a/website.css
+++ b/website.css
@@ -23,3 +23,68 @@ h2 {
 	font-size: 70px;
 	color: ghostwhite;
 }
+
+.button-group {
+  display: flex;
+  justify-content: space-around;
+}
+
+.linkedin-button {
+
+	background-color: transparent;
+	border: none;
+	border-radius: 0;
+	color: white;
+	cursor: pointer;
+	display: inline-block;
+	font-size: 8px;
+	margin: 0;
+	padding: 2px 0;
+	text-align: center;
+	text-decoration: none;
+}
+
+.linkedin-icon {
+	display: inline-block;
+	width: 100px;
+	height: auto;
+	margin-right: 4px;
+	background-color: transparent;
+	padding: 2px;
+}
+
+.linkedin-icon img {
+	border: none;
+	background-color: transparent;
+}
+
+.github-button {
+	margin-right: 200px;
+	background-color: transparent;
+	border: none;
+	border-radius: 0;
+	color: white;
+	cursor: pointer;
+	display: inline-block;
+	font-size: 8px;
+	margin: 0;
+	padding: 2px 0;
+	text-align: center;
+	text-decoration: none;
+}
+
+.github-icon {
+	margin-right: 200px;
+	display: inline-block;
+	width: 100px;
+	height: auto;
+	margin-right: 4px;
+	background-color: transparent;
+	padding: 2px;
+}
+
+.github-icon img {
+	margin-right: 200px;
+	border: none;
+	background-color: transparent;
+}
